--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,19 +7,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_dark_background"
+    android:layout_gravity="center"
     android:layout_margin="16dp"
+    android:orientation="vertical"
     >
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="-191dp">
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_gravity="center"
+        android:layout_margin="8dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="8dp"
+            >
 
             <TextView
                 android:id="@+id/tvHeroDetailTitle"
@@ -32,16 +45,21 @@
                 android:text="@string/hero_name"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="48sp"
+                android:textSize="32sp"
                 android:textStyle="bold" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/mcSelectedHero"
                 style="@style/Base.Theme.AndroidAdvanced"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_margin="16dp"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
                 android:layout_gravity="center"
+                app:layout_constraintBottom_toTopOf="@id/bMakeFavorite"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tvHeroDetailTitle"
                 app:cardCornerRadius="12dp"
                 app:strokeColor="@color/black"
                 app:strokeWidth="1dp">
@@ -50,36 +68,31 @@
                     android:id="@+id/ivHeroDetailPic"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
                     tools:srcCompat="@tools:sample/avatars[0]" />
             </com.google.android.material.card.MaterialCardView>
 
             <Button
                 android:id="@+id/bMakeFavorite"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Favorite" />
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/favorite" />
 
             <TextView
                 android:id="@+id/tvHeroDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="16dp"
+
                 android:text="@string/lorem_ipsum"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
         </LinearLayout>
+
     </ScrollView>
 
-    <!--    <ImageView-->
-<!--        android:id="@+id/ivHeroDetailPic"-->
-<!--        android:layout_width="fill_parent"-->
-<!--        android:layout_height="430dp"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:layout_margin="16dp"-->
-<!--        android:layout_weight="1"-->
-<!--        tools:srcCompat="@tools:sample/avatars" />-->
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
