--- a/app/src/main/res/layout/hero_cell.xml
+++ b/app/src/main/res/layout/hero_cell.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/cardview_dark_background"
+    android:background="@color/white"
     android:id="@+id/lLHeroCell">
     <TextView
         android:id="@+id/tvHeroNameCell"
