--- a/app/src/main/res/layout/hero_activity.xml
+++ b/app/src/main/res/layout/hero_activity.xml
@@ -7,8 +7,10 @@
     android:background="@color/cardview_dark_background">
 
     <LinearLayout
+        android:id="@+id/navigation_bar_item_large_label_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/fFragment"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,10 +45,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/navigation_bar_item_large_label_view"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/heroListTitle"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
