--- a/app/src/main/res/layout/hero_cell.xml
+++ b/app/src/main/res/layout/hero_cell.xml
@@ -6,17 +6,46 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@color/cardview_dark_background"
     android:id="@+id/lLHeroCell">
-    <TextView
-        android:id="@+id/tvHeroNameCell"
-        android:textColor="@color/white"
+
+    <LinearLayout
+        android:id="@+id/llHeroListBanner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hero_name"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:layout_margin="8dp"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@id/fFragment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.009"
+        >
+
+        <TextView
+            android:id="@+id/tvHeroNameCell"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/hero_name"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            app:layout_constraintHorizontal_weight="5"
+            />
+
+        <CheckBox
+            android:id="@+id/star"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+
+            android:clickable="true"
+            android:theme="@style/FavoriteCheckBox"
+            app:layout_constraintHorizontal_weight="1"
+            android:focusable="true" />
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/ivHeroThumb"
         tools:srcCompat="@tools:sample/avatars"
